--- a/contato.html
+++ b/contato.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Podcast.css">
-    <title>PODCAST|K.Sparks</title>
+    <link rel="stylesheet" href="contato.css">
+    <title>CONTACT|K.Sparks</title>
 </head>
 <body>
-     <!--Cabeçalho-->
-     <header>
+    <!--Cabeçalho-->
+    <header>
         <nav>
             <ul type="none">
                 <li><a href="casa.html">casa</a></li>
@@ -23,28 +23,22 @@
             </ul>
         </nav>
     </header>
-    <!--Seção de imagens-->
-    <section id="imagens">
-        <div class="primeira-imagem">
-            <a href="https://audioboom.com/channels/5047126" target="_blank"><img src="imagens/Logo gold.webp" alt="gold"></a>
-        </div>
-        <div class="segunda-imagem">
-            <a href="https://podcasts.apple.com/us/podcast/diagnosis-success/id1558345455" target="_blank"><img src="imagens/apple-podcast.webp" alt="apple-podcast"></a>
-        </div>
-        <div class="terceira-imagem">
-            <a href="https://open.spotify.com/show/2ZGjbGjYxcVzRFAvnMaw4Q" target="_blank"><img src="imagens/Listen Spotify.webp" alt="Listen spotify"></a>
-        </div>
-        <div class="quarta-imagem">
-            <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9hdWRpb2Jvb20uY29tL2NoYW5uZWxzLzUwNDcxMjYucnNz" target="_blank"><img src="imagens/google_podcasts_badge@8x.webp" alt="google_podcasts_badge"></a>
-        </div>
-        <div class="quinta-imagem">
-            <a href="https://www.deezer.com/us/show/2415402" target="_blank"><img src="imagens/Deezer.webp" alt="Deezer"></a>
-        </div>
-        <div class="sexta-imagem">
-            <a href="https://radiopublic.com/diagnosis-success-GyanK3" target="_blank"><img src="imagens/Radio Public.webp" alt="Radio Public"></a>
-        </div>
+    <!--Contato da nossa empresa-->
+    <section class="contato-da-empresa">
+        <h1>Contato</h1>
+        <p>Reserva</p>
+        <p>Ksparksmusic@gmail.com</p>
     </section>
-   <!--Rodapé-->
+    <!--Insira seu email por aqui-->
+    <section id="e-mail">
+        <h4>INCREVA-SE PARA ATUALIZAÇÕES</h4>
+        <label for="e-mail">
+            <p>Insira seu e-mail aqui*</p>
+        </label>
+        <input type="e-mail" name="e-mail" id="e-mail" class="e-mail">
+        <input type="button" value="Increva-se agora" class="botao">
+        </section>
+         <!--Rodapé-->
    <footer>
     <!--Facebook-->
     <a href="https://web.facebook.com/KsparksMusic/?_rdc=1&_rdr" target="_blank"><img src="imagens/imagem-facebook.webp" alt="imagem-facebook"></a>
