--- a/video.html
+++ b/video.html
@@ -19,7 +19,7 @@
                 <li><a href="clientes.html">clientes</a></li>
                 <li><a href="imprensa.html">imprensa</a></li>
                 <li><a href="Podcast.html">podcast</a></li>
-                <li><a href="#">contato</a></li>
+                <li><a href="contato.html">contato</a></li>
             </ul>
         </nav>
     </header>
